[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["chihwei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
fake-useragent = "^1.4.0"
pandas = "^2.1.4"
loguru = "^0.7.2"
bs4 = "^0.0.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
lxml = "^4.9.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
